# tinyfort

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-and-test.sh  compile-and-link.sh  default.nix  test-examples.sh
examples/: .gitignore  example.fort  fact.f90  for.f90  hello.f90  letset.f90  prog1.f90  prog10.f90  prog10.f90.input  prog11.f90  prog12.f90  prog2.f90  prog3.f90  prog4.f90  prog4.f90.output.golden  prog5.f90  prog6.f90  prog7.f90  prog8.f90  prog9.f90  putchar.f90  putstr.f90  run_all_exampes.sh  run_single_example.sh
include/tinyfort/: interpreter.h  ir.h  scope.h
src/: Main  Main.lhs  interpreter.cpp  lexer.l  libfort.c  main.cpp  parser.yy
